@@ -1,19 +1,66 @@
-plugins {
-    id 'java'
-}
+import java.time.LocalDateTime
+import java.time.format.DateTimeFormatter
 
-group = 'nasser'
-version = '1.0-SNAPSHOT'
+plugins {
+    id 'java-library'
+    id 'idea'
+    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1.6'
+}
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://maven.bookmap.com/maven2/releases/"
+    }
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    if (findProperty('is_built_from_main_bookmap_project')) {
+        implementation fileTree(dir: "${main_libs}", include: ['*.jar'])
+        implementation project(':Level1Api')
+        implementation project(':SimplifiedApiWrapper')
+    } else {
+        implementation  group: 'com.bookmap.api', name: 'api-core', version: '7.4.0.19'
+        implementation  group: 'com.bookmap.api', name: 'api-simplified', version: '7.4.0.19'
+        implementation  group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
+    }
 }
 
-test {
-    useJUnitPlatform()
+// Get current date and time
+def currentDateTime = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy_M_d_HH_mm"))
+
+jar {
+    archiveFileName = "Bookmap_Add_On_${currentDateTime}.jar"
 }
+
+idea.module.downloadJavadoc = true
+
+
+if(idea.project) {
+    // Create 'BookmapJar' run configuration for IntelliJ
+    idea.project.settings.runConfigurations {
+        def addOpensOptions = '--add-opens=java.base/java.lang=ALL-UNNAMED\n' +
+                '--add-opens=java.base/java.io=ALL-UNNAMED\n' +
+                '--add-opens=java.base/java.math=ALL-UNNAMED\n' +
+                '--add-opens=java.base/java.util=ALL-UNNAMED\n' +
+                '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED\n' +
+                '--add-opens=java.base/java.net=ALL-UNNAMED\n' +
+                '--add-opens=java.base/java.text=ALL-UNNAMED\n' +
+                '--add-opens=java.desktop/java.awt=ALL-UNNAMED\n' +
+                '--add-opens=java.desktop/java.awt.color=ALL-UNNAMED\n' +
+                '--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED\n' +
+                '--add-opens=java.desktop/com.sun.java.swing=ALL-UNNAMED\n' +
+                '--add-opens=java.prefs/java.util.prefs=ALL-UNNAMED'
+        if (org.gradle.internal.os.OperatingSystem.current().isWindows()) {
+            addOpensOptions += '--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED\n'
+        }
+
+        'BookmapJar'(org.jetbrains.gradle.ext.JarApplication) {
+            // Change the path to Bookmap.jar here if you changed the default installation directory
+            jarPath = 'C:\\Program Files\\Bookmap\\Bookmap.jar'
+            workingDirectory = 'C:\\Bookmap'
+            jvmArgs = addOpensOptions
+        }
+    }
+}
+
